testsuite/bsc.evaluator/uninit/UninitBitErr1.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling UninitBitErr1.bsv
code generation for sysUninitBitErr1 starts
Error: "UninitBitErr1.bsv", line 3, column 12: (G0028)
  `x[4]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitErr1.bsv", line
  8, column 9.
  During elaboration of `sysUninitBitErr1' at "UninitBitErr1.bsv", line 2,
  column 8.
